# purescript-corefn.rs

./: Cargo.toml  Makefile  README.md
src/: lib.rs  walk.rs
tests/: Main.js  Main.purs  tests.rs
tests/Main/: corefn.json  externs.json
